# newdelpoy

./: .gitignore  celerybeat-schedule  manage.py  nano.save  pyproject.toml
hmw5/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
home/: admin.py  emails.py  filter.py  forms.py  models.py  signals.py  tasks.py  views.py
home/management/commands/: delete_students.py  insert_students.py
home/migrations/: 0001_initial.py  0002_auto_20210125_1536.py  0003_auto_20210125_1545.py  0004_filter.py  0005_delete_filter.py  0006_currency.py  0007_student_picture.py  0008_remove_student_picture.py
home/templates/: add_student.html  base.html  book_list.html  currency.html  delete.html  delete_book.html  delete_teacher.html  email.html  form_index.html  index.html  sign.html  student_create.html  student_list.html  student_subject.html  subject.html  teacher.html  teacher_student.html  update.html  update_student.html  update_subject.html  update_teacher.html
home/templatetags/: poll_extras.py
